--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,7 +137,8 @@ android {
         applicationId "com.codescannerapp2"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        missingDimensionStrategy 'react-native-camera', 'general' <-- insert this line
+        missingDimensionStrategy 'react-native-camera', 'general'
+
         versionCode 1
         versionName "1.0"
         buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
